# grpc-serialize-deserialize-test

./: .gitignore  index.js  package.json  proto-bin  readme.md  test.proto
proto-test/: Cargo.toml  build.rs
proto-test/src/: main.rs  test.rs
