[package]
name = "proto-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.1"
prost = "0.11.9"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
